--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Phil Kessel",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "schema-utils": "^2.6.5"
+  }
 }
