updated README, optionsSchema and improved code flexibility
updated a few markdown errors

README.md quotation issue

updated installation instructions

typo

updated documentation for readme

new name for repo, implemented standard webpack logging

updated formatting for readme

formatting

fixed error in md

Removed relative path from options schema and code. Caused bug from __dirname within node_modules. New Schema chunkOverrides is only path and file.

fixed markdown

A little code cleanup

Update README.md

indentation

a bit more code cleanup

update

Update README.md

Update README.md

 Squashed extra commits to clean up historyw

moved to array methods. Realized I could just return and not

updated code to ignore chunk files if not js or css to prevent errors while compiling

changes to readme formatting

--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "replace-content-plugin",
+  "name": "inject-chunks-webpack-plugin",
   "version": "1.0.0",
   "description": "",
-  "main": "ReplaceContentPlugin.js",
+  "main": "InjectChunksWebpackPlugin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Phil Kessel",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "schema-utils": "^2.6.5"
+  }
 }
